--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -14,7 +14,7 @@
         display: flex;
         align-self: flex-start;
     }
-    .login_button{
+    .button{
         border: none;
         color: white;
         font-size: 16px;
