--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+:root {
+    --dblue:  rgb(61, 61, 94);
+}
+
 body{
     display:flex;
     justify-content: center;
@@ -5,6 +9,43 @@ body{
     background: rgb(61, 61, 94);
 }
 
-.title{
-    margin-bottom: 100px;
+.nav{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    padding:0;
+    margin: 0;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid white;
+    
 }
+.goBack{
+    height: 100%;
+    position: absolute;
+    left: 12px;
+    /* top: 12px; */
+    display: flex;
+    align-items: center;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.title{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    margin-bottom: 0;
+}
+
+.content{
+    display: flex;
+    justify-content: center;
+    margin-top: 80px;
+    width: calc(100% - 200px);
+    position: absolute;
+    left: 200px;
+}
+
