--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -103,18 +103,19 @@ input, select, textarea{
         }
         
     }
-    .table_row{
+    .table_rows{
         width: 100%;
         padding: 0;
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
         &:not(:last-child){
             border-bottom: solid 1px white;
             margin-bottom: 20px;
         }
         div{
             padding: 0 0 12px 0;
-            width: 200px;
+            width: 250px;
             display: flex;
             align-items: flex-end;
             text-align: left;
