--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -1,3 +1,4 @@
+
 .form_square{
     
     padding: 0 24px;
@@ -64,17 +65,20 @@
 input, select, textarea{
     // display: none;
     border-radius: 0 !important;
-    background: none !important;
+    // background:  !important;
+    background: var(--dblue);
+    background: linear-gradient(135deg, var(--dblue) 0%,var(--dblue-50) 50%, var(--dblue) 100%);
+    border-radius: 10px !important;
     width: 200px !important;
     color: white;
     border: none !important; 
-    border-bottom: 1px solid white !important;
+    // border-bottom: 1px solid white !important;
     height: fit-content !important;
 }
 
 ::placeholder , select{
     color: white;
-    opacity: 0.6; 
+    opacity: 0.6;
   }
 
 
@@ -85,8 +89,22 @@ input, select, textarea{
     visibility: hidden;
     opacity: 0;
     background: var(--dblue);
-    background: linear-gradient(180deg, var(--dblue) 0%, rgba(39,39,66,1) 50%, rgba(39,39,66,1) 75%, var(--dblue) 100%);
+    background: linear-gradient(180deg, var(--dblue) 0%,var(--dblue-50) 50%,var(--dblue-50) 75%, var(--dblue) 100%);
 
+    .table_header{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-size: 24px;
+        i{
+            cursor: pointer;
+        }
+    }
+    .ttitle{
+        border-bottom: 1px solid white;
+        width: fit-content;
+        padding-right: 24px;
+    }
     
     &.show{
         visibility: visible;
@@ -99,7 +117,7 @@ input, select, textarea{
         justify-content: space-between;
         margin-bottom: 24px;
         h5{
-            width: 200px;
+            width: 250px;
         }
         
     }
@@ -117,17 +135,22 @@ input, select, textarea{
             padding: 0 0 12px 0;
             width: 250px;
             display: flex;
-            align-items: flex-end;
+            align-items: flex-start;
             text-align: left;
         }
         .actions{
             display: flex;
             justify-content: space-around;
-            cursor: pointer;
             i{
+                // z-index: 1;
+                cursor: pointer;
                 padding: 12px 18px;
             }
         }
         
     }
+}
+
+.table_list{
+    margin-bottom: 74px;
 }
