--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -1,12 +1,20 @@
+.login{
+    width: 100%;
+    left: 0;
+}
 .login_square{
-    border: 1px solid white;
     border-radius: 10px;
     padding: 24px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    // position: absolute;
+    // left: 0;
+    // background: blue;
 }
 .form_login{
+    // background: pink;
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,14 +24,15 @@
     }
     .button{
         border: none;
-        color: white;
+        color: var(--dblue-50);
         font-size: 16px;
-        transition: 0.5s ease;
+        transition: 1s ease;
         visibility: hidden;
         opacity: 0;
         &:hover{
-            background: white;
-            color: rgb(61, 61, 94);
+            background: var(--dblue);
+            background: linear-gradient(135deg, var(--dblue) 0%,var(--dblue-50) 50%, var(--dblue) 100%);
+            color: white;
         }
         &.show{
             visibility: visible;
