--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body{
     justify-content: center;
     color:white;
     background: rgb(61, 61, 94);
+    overflow: hidden;
 }
 
 .nav{
@@ -33,6 +34,16 @@ body{
     font-size: 30px;
     cursor: pointer;
 }
+.goOut{
+    height: 100%;
+    position: absolute;
+    right: 12px;
+    /* top: 12px; */
+    display: flex;
+    align-items: center;
+    font-size: 30px;
+    cursor: pointer;
+}
 
 .title{
     height: 100%;
@@ -48,5 +59,8 @@ body{
     width: calc(100% - 200px);
     position: absolute;
     left: 200px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    max-height: 90vh;
 }
 
